--- a/NeuroTwin/requirements.txt
+++ b/NeuroTwin/requirements.txt
@@ -1,12 +1,10 @@
-streamlit
-plotly
+streamlit>=1.28
+plotly>=5.15
 pandas
 numpy
 pyttsx3
-openpyxl
 fpdf2
 kaleido
-webrtcvad
-kaleido
+openpyxl
 webrtcvad
 altair==5.3.0
